ui/src/objects/Field__c.object
<CustomObject>
    <fields>
        <fullName>Column_Name__c</fullName>
        <label>Column Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_id__c</fullName>
        <label>Entity</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>NVARCHAR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLOAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isUnique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUnique</label>
        <type>Checkbox</type>
    </fields>
    <label>Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Column_Name_regex</fullName>
        <active>true</active>
        <errorConditionFormula>!REGEX(Column_Name__c, &apos;^\\w+$&apos;)</errorConditionFormula>
        <errorMessage>Field &apos;Column Name&apos; must have at list one symbol and include just leters and numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FIeld_Type_cannot_have_length</fullName>
        <active>true</active>
        <description>All type of picklist except NVARCHAR can&apos;t have length</description>
        <errorConditionFormula>TEXT( Field_Type__c )  &lt;&gt; &apos;NVARCHAR&apos;
 &amp;&amp; 
 !ISNULL( Length__c )</errorConditionFormula>
        <errorMessage>All type of picklist except NVARCHAR can&apos;t have length</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Type_requird_not_be_null</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Field_Type__c ) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Field &apos;Type__c &apos; can&apos;t be null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_regex</fullName>
        <active>true</active>
        <errorConditionFormula>!REGEX(Name__c, &apos;^\\w+$&apos;)</errorConditionFormula>
        <errorMessage>Field &apos;Name&apos; must have at list one symbol and include just leters and numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_NVARCHAR_has_length</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Field_Type__c ) = &apos;NVARCHAR&apos;
 &amp;&amp; 
( 
Length__c  &lt;= 0
||
ISNULL(Length__c) 
)</errorConditionFormula>
        <errorMessage>Field &apos;Length&apos; can&apos;t be null if type is &apos;NVARCHAR&apos;</errorMessage>
    </validationRules>
</CustomObject>